# umlx

./: .clang-format  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  UMLX_REBRAND_SUMMARY.md  mlx.pc.in  pyproject.toml  setup.py  umlx.pc.in
umlx/: CMakeLists.txt  allocator.h  array.cpp  array.h  compile.cpp  compile.h  compile_impl.h  device.cpp  device.h  dtype.cpp  dtype.h  dtype_utils.cpp  dtype_utils.h  einsum.cpp  einsum.h  event.h  export.cpp  export.h  export_impl.h  fast.cpp  fast.h  fast_primitives.h  fence.h  fft.cpp  fft.h  graph_utils.cpp  graph_utils.h  io.h  linalg.cpp  linalg.h  memory.h  ops.cpp  ops.h  primitives.cpp  primitives.h  random.cpp  random.h  scheduler.cpp  scheduler.h  small_vector.h  (+10 more)
umlx/backend/common/: CMakeLists.txt  binary.h  broadcasting.cpp  broadcasting.h  buffer_cache.h  common.cpp  compiled.cpp  compiled.h  copy.h  hadamard.h  load.cpp  matmul.h  reduce.cpp  reduce.h  slicing.cpp  slicing.h  ternary.h  unary.h  utils.cpp  utils.h
umlx/backend/cpu/: CMakeLists.txt  arange.h  arg_reduce.cpp  available.cpp  available.h  binary.cpp  binary.h  binary_ops.h  binary_two.h  cholesky.cpp  compiled.cpp  compiled_preamble.h  conv.cpp  copy.cpp  copy.h  distributed.cpp  eig.cpp  eigh.cpp  encoder.cpp  encoder.h  eval.cpp  eval.h  fft.cpp  gemm.h  hadamard.cpp  indexing.cpp  inverse.cpp  jit_compiler.cpp  jit_compiler.h  lapack.h  logsumexp.cpp  luf.cpp  make_compiled_preamble.ps1  make_compiled_preamble.sh  masked_mm.cpp  matmul.cpp  primitives.cpp  qrf.cpp  quantized.cpp  reduce.cpp  (+12 more)
umlx/backend/cuda/: CMakeLists.txt  allocator.cpp  allocator.h  arange.cu  arg_reduce.cu  bin2h.cmake  binary_two.cu  compiled.cpp  conv.cpp  copy.cu  cublas_utils.cpp  cublas_utils.h  cuda.cpp  cuda.h  cuda_utils.h  cudnn_utils.cpp  cudnn_utils.h  custom_kernel.cpp  device.cpp  device.h  distributed.cu  eval.cpp  event.cu  event.h  fence.cpp  indexing.cpp  jit_module.cpp  jit_module.h  kernel_utils.cu  kernel_utils.cuh  layer_norm.cu  load.cpp  logsumexp.cu  lru_cache.h  matmul.cpp  no_cuda.cpp  primitives.cpp  random.cu  reduce.cu  rms_norm.cu  (+13 more)
umlx/backend/gpu/: CMakeLists.txt  available.h  copy.cpp  copy.h  eval.h  primitives.cpp  slicing.cpp  slicing.h
umlx/backend/metal/: CMakeLists.txt  allocator.cpp  allocator.h  binary.cpp  binary.h  compiled.cpp  conv.cpp  copy.cpp  custom_kernel.cpp  device.cpp  device.h  distributed.cpp  eval.cpp  event.cpp  fence.cpp  fft.cpp  hadamard.cpp  indexing.cpp  jit_kernels.cpp  kernels.h  logsumexp.cpp  make_compiled_preamble.sh  matmul.cpp  matmul.h  metal.cpp  metal.h  no_metal.cpp  nojit_kernels.cpp  normalization.cpp  primitives.cpp  reduce.h  (+17 more)
umlx/distributed/: CMakeLists.txt  distributed.cpp  distributed.h  distributed_impl.h  ops.cpp  ops.h  primitives.cpp  primitives.h  reduction_ops.h  utils.cpp  utils.h
umlx/io/: CMakeLists.txt  gguf.cpp  gguf.h  gguf_quants.cpp  load.cpp  load.h  no_gguf.cpp  no_safetensors.cpp  safetensors.cpp
umlx/types/: bf16.h  complex.h  fp16.h  half_types.h  limits.h
(+566 files in other folders)
